update our gitpod.yml file to install npm i

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "aws.telemetry": false
+    "aws.telemetry": false,
+    "editor.experimentalWhitespaceRendering": "font",
+    "editor.renderWhitespace": "all",
+    "files.trimTrailingWhitespace": true
 }
