--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,9 +16,8 @@ tasks:
       sudo apt install -y postgresql-client-13 libpq-dev
   - name: react-js
     command: |
-      cd /workspace/frontend-react-js
+      cd frontend-react-js
       npm i
-      cd $THEIA_WORKSPACE_ROOT
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
